Addresses #238 --bs-code-color contrast issue on striped table - Add custom `code` style with a darker color on the Bootstrap palette. - Also fix `btn-info` class contrast issues.

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -49,8 +49,8 @@ a {
 }
 
 .btn-info {
-  background-color: #087990; //$cyan-700
-  border-color: #087990; //$cyan-700
+  background-color: #395B6E;
+  border-color: #395B6E;
   // Additions from https://stackoverflow.com/a/25933439 to accommondate dropdown menu in info button
   &:hover, &:focus, &:active, .open>.dropdown-toggle.btn-info, &:active:focus, &:first-child:active {
     background-color: #055160; //$cyan-800
@@ -64,6 +64,10 @@ a {
 
 label a {
   font-weight:400
+}
+
+code {
+  color: $red-700;
 }
 
 .complete-registration-link {
